--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExd3VqdHF6MDNyZmpndHZrbHFzNnFwOHJ3dDc0MXI3M3o2NHZpc3h5cSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/nXQZ2BQ2VtbZC/giphy.gif" alt="Royal GIF">
     <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHBvZjNja2plM3NxZmJxcG9jaHFhM2xmajNiYWUxNjc1NGJmd2dwZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/AVSl859um5sCA/giphy.gif" alt="Cool GIF">
     <h2 class="pulse-text">I love xdrive</h2>
-    <h1>mr brady</h1>
+    <h1>hiten is gay</h1>
     <button id="corsTestButton">
         I FREAKING LOVE TESTING API CORS POLICIES
     </button>
